# KaleidoLauncher

./: .gitignore  README.md  main.py  pyproject.toml
app/: __main__.py
app/src/mclib/: mclib.py
app/src/screens/: ProfilesScreen.py
app/src/styles/: ProfileScreen.tcss
app/src/utils/: fileHandling.py
src/app/: __init__.py  cli.py
src/app/src/db/: dbCreation.py
src/app/src/langs/: Languages.py
src/app/src/mclib/: mclib.py
src/app/src/profiles/: profileManagement.py
src/app/src/screens/: DashboardScreen.py  ProfilesScreen.py  SelectLanguageScreen.py
src/app/src/styles/: Styles.py
src/app/src/utils/: fileHandling.py  miscFunctions.py  typo.py
