[project]
name = "kaleido"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.13.3",
    "minecraft-launcher-lib>=8.0",
    "pydantic>=2.12.5",
    "pyinstaller>=6.18.0",
    "textual>=7.4.0",
    "textual-dev>=1.8.0",
]
